--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -422,7 +422,7 @@ service perfd /system/vendor/bin/perfd
 service per_mgr /system/vendor/bin/pm-service
     class late_start
     user system
-    group system net_raw
+    group system
     ioprio rt 4
     writepid /dev/cpuset/system-background/tasks
 
